Bug 105026 - glxgears asserts with pp_jimenezmlaa=1
Summary: glxgears asserts with pp_jimenezmlaa=1
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-09 19:37 UTC by EoD
Modified: 2018-04-05 01:09 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
glxgears/mesa backtrace with -Og (6.04 KB, text/x-log)
2018-02-09 19:37 UTC, EoD
Details

Description EoD 2018-02-09 19:37:48 UTC
Created attachment 137249 [details]
glxgears/mesa backtrace with -Og

Any program asserts when pp_jimenezmlaa is enabled. For example glxgears.

> gdb glxgears
> (gdb) set environment pp_jimenezmlaa 1
> (gdb) run

Might be a duplicate of bug 99549
Comment 1 Timothy Arceri 2018-04-05 01:09:25 UTC
Fixed by:

author	Marek Olšák <marek.olsak@amd.com>

gallium/pp: use user constant buffers
This fixes a radeonsi crash.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=105026


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.